--- a/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
@@ -450,7 +450,7 @@ md-nav-ink-bar {
 .products-hero-image {
 	width: 100%;
     position: relative;
-    left: -10%;
+    left: 0;
 }
 
 .product-image {
@@ -468,6 +468,9 @@ md-nav-ink-bar {
 	border-radius: 0;
 	padding: 0 15px;
 	text-transform: lowercase;
+	padding:10px 40px;
+	font-weight:bold;
+	margin-left: 0;
 }
 
 /**
@@ -672,27 +675,58 @@ md-nav-ink-bar {
 	top:15px;
 }
 
-.insect-controller-buttons {
+.insect-controller-buttons,
+.product-controller-buttons {
 	position: absolute;
 	display: block;
 	width:100%;
 	left:0;
+	top:10%;
 	
+}
+.product-controller-buttons {
+	top:60%;
 }
 
 .insect-controller-buttons .icon-chevron-left,
-.insect-controller-buttons .icon-chevron-right {
+.insect-controller-buttons .icon-chevron-right,
+.product-controller-buttons .icon-chevron-left,
+.product-controller-buttons .icon-chevron-right {
 	position: absolute;
 	font-size: 2em;
 	border:none;
 	background:none;
-} 
+}
 
-.insect-controller-buttons .icon-chevron-left {
+.product-controller-buttons .icon-chevron-left,
+.product-controller-buttons .icon-chevron-right {
+	background:#14A774;
+	color:#fff;
+	padding:20px;
+}
+
+.insect-controller-buttons .icon-chevron-left,
+.product-controller-buttons .icon-chevron-left {
 	left:0;
 }
-.insect-controller-buttons .icon-chevron-right {
+.insect-controller-buttons .icon-chevron-right,
+.product-controller-buttons .icon-chevron-right {
 	right:0;
+}
+
+.product-filter-categories .primary-tag {
+	margin:0;
+	border:none;
+	padding:10px 40px;
+	font-weight:bold;
+	text-transform: uppercase;
+	font-size: 1.5em;
+}
+.product-filter-categories .primary-tag.active {
+	margin:0;
+	border:none;
+	background:#14A774;
+	color:#fff;
 }
 
 /** /
@@ -858,6 +892,15 @@ md-card md-card-content {
 .bg-image {
 	width: 100%; height: 100%;
 }
+
+.product-image-holder.bg-box::before {
+	
+}
+
+.product-image-holder.bg-box {
+	height: auto;
+}
+
 
 
 /* ==|== non-semantic helper classes ========================================
