--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.css
@@ -28,7 +28,7 @@ md-toolbar {
 }
 
 md-backdrop {
-  display: none;
+  background-color: transparent;
 }
 
 /***********************************************
@@ -187,7 +187,7 @@ div[data-ui-carousel] {
 }
 
 .carousel-container .carousel {
-  overflow-x: scroll !important;
+  overflow-x: hidden !important;
 }
 
 .carousel-container .carousel .list {
@@ -496,31 +496,40 @@ md-autocomplete-wrap input {
   padding-top: 81px;
 }
 
-#footer .footer-content .animate-page-switch {
+#footer .footer-content > .animate-page-switch {
   margin-bottom: 200px;
 }
 
-#footer .footer-content .animate-page-switch .ng-animate {
+#footer .footer-content > .animate-page-switch .ng-animate {
   -webkit-transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
   -moz-transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
   -ms-transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
   -o-transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
 }
 
-#footer .footer-content .animate-page-switch.ng-leave.ng-leave-active,
-#footer .footer-content .animate-page-switch.ng-enter {
-  top: 100%;
+#footer .footer-content > .animate-page-switch.ng-leave.ng-leave-active,
+#footer .footer-content > .animate-page-switch.ng-enter {
+  -webkit-transform: translateY(100%);
+  -moz-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  -o-transform: translateY(100%);
+  transform: translateY(100%);
+  opacity: 0;
 }
 
-#footer .footer-content .animate-page-switch.ng-leave,
-#footer .footer-content .animate-page-switch.ng-enter.ng-enter-active {
-  top: 0;
+#footer .footer-content > .animate-page-switch.ng-leave,
+#footer .footer-content > .animate-page-switch.ng-enter.ng-enter-active {
+  -webkit-transform: translateY(0%);
+  -moz-transform: translateY(0%);
+  -ms-transform: translateY(0%);
+  -o-transform: translateY(0%);
+  transform: translateY(0%);
+  opacity: 1;
+}
+
+#footer div[data-ui-form-contact] {
+  color: #000;
 }
 
 /***********************************************
@@ -746,9 +755,15 @@ END slider style
   transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
   opacity: 0;
   height: 150px;
+  max-width: 110px;
 }
 
 #configurator .insect-selector .thumbnail i[class^='icon-'] {
+  -webkit-transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
   width: 1.5em;
   height: 1em;
   display: inline-block;
