insect profile page; google map; css styling

--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.css
@@ -105,7 +105,7 @@ md-sidenav ul li {
   content: ' ';
   height: 33px;
   width: 2px;
-  background-color: #333;
+  background-color: #ffffff;
 }
 
 .close::before {
