--- a/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
@@ -1,7 +1,7 @@
 body {
 	overflow-x: hidden;
 	font-size: 100%;
-
+	color: #555;
 	-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 	-webkit-text-size-adjust: 100%; 
 }
@@ -160,6 +160,10 @@ body:after {
 	-webkit-transition: max-height 0.1s ease;
 	transition: max-height 0.1s ease;
 	border-top:1px solid #ccc;
+}
+
+.page-faq .collapsible-item .body {
+	border-top:1px solid #219c71;
 }
 
 .collapsible-item .body .content {
@@ -396,10 +400,27 @@ md-nav-ink-bar {
 }
 
 .super-bug-image {
-	position: absolute;
-    width: 50%;
-    top: 0;
-    left: 10%;
+	position: relative;
+    width: 100%;
+    top: -50px;
+    left: 5%;
+}
+
+.super-hero-bg {
+	position: relative;
+}
+.super-hero-bg:before {
+	content: '';
+	position: relative;
+}
+.super-bug-image-bg {
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	position: relative;
+	width:748px;
+	height:1080px;
+	top:-50px;
 }
 /**
 * 
@@ -420,7 +441,7 @@ md-nav-ink-bar {
 
 
 .page-title {
-	font-size: 60px;
+	font-size: 55px;
     margin: 0;
 	line-height: 60px;
 	text-transform: uppercase;
@@ -696,7 +717,7 @@ md-nav-ink-bar {
 	display: block;
 	width:100%;
 	left:0;
-	top:10%;
+	top:27vh;
 	
 }
 .product-controller-buttons {
@@ -792,6 +813,35 @@ md-nav-ink-bar {
 .config-head {
 	margin-bottom:2em;
 	pointer-events: none;
+}
+
+/***PROFILE*/
+.profile-box {
+	border:5px solid #14A774;
+	padding:20px 40px;
+	margin: 2em auto;
+	background-color:#fff;
+}
+
+.page-profile-container .map-container {
+	position: relative;
+}
+
+.page-profile-container .map-container svg,
+.page-profile-container .map-container img{
+	width:100%;
+	height:100%;
+}
+.page-profile-container .map-container svg{
+	position: absolute;
+    top: 0;
+    opacity: 0;
+}
+.page-profile-container .map-container img{
+
+}
+.page-profile-container .map-container svg .pin{
+	
 }
 /**
 * 
@@ -890,7 +940,8 @@ md-card md-card-content {
 
 .bg-box {
 	position: relative;
-	width: 100%; height: 100%;
+	width: 90%; 
+	height: 100%;
 }
 
 .bg-box::before {
