--- a/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
@@ -171,6 +171,11 @@ body:after {
 	padding-left: 0;
 }
 
+.page-products-single .collapsible-item .body .content {
+
+	line-height: 30px;
+}
+
 .collapsible-item.open .body {
 	max-height: 100%;
 	z-index: 1;
@@ -422,6 +427,41 @@ md-nav-ink-bar {
 	height:1080px;
 	top:-50px;
 }
+
+.page-insects-single-ant .app-dashboard,
+.page-insects-single-fly .app-dashboard,
+.page-insects-single-flea .app-dashboard,
+.page-insects-single-fishmoth .app-dashboard,
+.page-insects-single-mosquito .app-dashboard,
+.page-insects-single-cockroach  .app-dashboard { 
+	position: relative;
+	display: block;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	
+	background-repeat: no-repeat;
+}
+
+.page-insects-single-ant .app-dashboard {
+	background-image: url('../images/ANT_bg.jpg');
+}
+.page-insects-single-fly .app-dashboard {
+	background-image: url('../images/FLIES_bg.jpg');
+}
+.page-insects-single-flea .app-dashboard {
+	background-image: url('../images/FLEA_bg.jpg');
+}
+.page-insects-single-fishmoth .app-dashboard {
+	background-image: url('../images/insect-bg-fishmoth.jpg');
+}
+.page-insects-single-mosquito .app-dashboard {
+	background-image: url('../images/MOZZIE_bg.jpg');
+}
+.page-insects-single-cockroach .app-dashboard {
+	background-image: url('../images/COCKROACH_bg.png');
+}
 /**
 * 
 * General Page Structure
@@ -514,8 +554,8 @@ md-nav-ink-bar {
 .product-insects,
 .insect-insects {
 	position: relative;
-	margin: 2em auto;
-	padding: 0;
+	margin: 0 auto;
+	padding: 0; 
 }
 
 .product-insects li {
@@ -744,11 +784,11 @@ md-nav-ink-bar {
 
 .insect-controller-buttons .icon-chevron-left,
 .product-controller-buttons .icon-chevron-left {
-	left:0;
+	left:-60px;
 }
 .insect-controller-buttons .icon-chevron-right,
 .product-controller-buttons .icon-chevron-right {
-	right:0;
+	right:-60px;
 }
 
 .product-filter-categories .primary-tag {
@@ -854,7 +894,7 @@ md-nav-ink-bar {
 **/
 .animate-page-switch-container {
 	position:relative;
-	padding-top: 80px
+	padding-top: 40px
 }
 
 /* .animate-page-switch {
